--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -17,6 +17,15 @@
         {% include "include/_navbar.html.twig" %}
     </header>
     <body>
+
+            {% for category, messages in app.flashes %}
+                {% for message in messages %}
+                    <div class="alert alert-{{ category }}" role="alert">
+                        {{ message }}
+                    </div>
+                {% endfor %}
+            {% endfor %}
+
         {% block body %}{% endblock %}
     </body>
 </html>
