--- a/templates/program/show.html.twig
+++ b/templates/program/show.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block body  %}
-<<div class="media">
+<div class="media">
     <img class="align-self-start mr-3" src="{{program.poster}}" alt="{{ program.title }} poster">
     <div class="media-body">
         <h1 class="mt-0">{{ program.title }}</h1>
@@ -9,7 +9,14 @@
         <p>Catégorie : {{ program.category.name }}</p>
     </div>
 </div>
-
+<strong>Acteurs :</strong>
+<ul>
+    {% for actor in program.actors %}
+        <li>{{ actor.name }}</li>
+    {% else %}
+        <li>Aucun acteur pour cette série</li>
+    {% endfor %}
+</ul>
     <a href="{{ path('program_index') }}">
         Retour à la liste des programmes
     </a>
